; ModuleID = '/home/carl/AnghaBench/lab/engine/code/sys/extr_sys_unix.c_Sys_PlatformInit.c'
source_filename = "/home/carl/AnghaBench/lab/engine/code/sys/extr_sys_unix.c_Sys_PlatformInit.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [5 x i8] c"TERM\00", align 1
@STDIN_FILENO = common dso_local global i32 0, align 4
@.str.1 = private unnamed_addr constant [4 x i8] c"raw\00", align 1
@.str.2 = private unnamed_addr constant [5 x i8] c"dumb\00", align 1
@stdinIsATTY = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @Sys_PlatformInit() #0 {
  %1 = alloca i8*, align 8
  %2 = call i8* @getenv(i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str, i64 0, i64 0))
  store i8* %2, i8** %1, align 8
  %3 = call i32 (...) @Sys_SetFloatEnv()
  %4 = load i32, i32* @STDIN_FILENO, align 4
  %5 = call i64 @isatty(i32 %4)
  %6 = icmp ne i64 %5, 0
  br i1 %6, label %7, label %24

7:                                                ; preds = %0
  %8 = load i8*, i8** %1, align 8
  %9 = icmp ne i8* %8, null
  br i1 %9, label %10, label %21

10:                                               ; preds = %7
  %11 = load i8*, i8** %1, align 8
  %12 = call i32 @strcmp(i8* %11, i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str.1, i64 0, i64 0))
  %13 = icmp ne i32 %12, 0
  br i1 %13, label %14, label %19

14:                                               ; preds = %10
  %15 = load i8*, i8** %1, align 8
  %16 = call i32 @strcmp(i8* %15, i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str.2, i64 0, i64 0))
  %17 = icmp ne i32 %16, 0
  %18 = xor i1 %17, true
  br label %19

19:                                               ; preds = %14, %10
  %20 = phi i1 [ true, %10 ], [ %18, %14 ]
  br label %21

21:                                               ; preds = %19, %7
  %22 = phi i1 [ false, %7 ], [ %20, %19 ]
  %23 = xor i1 %22, true
  br label %24

24:                                               ; preds = %21, %0
  %25 = phi i1 [ false, %0 ], [ %23, %21 ]
  %26 = zext i1 %25 to i32
  store i32 %26, i32* @stdinIsATTY, align 4
  ret void
}

declare dso_local i8* @getenv(i8*) #1

declare dso_local i32 @Sys_SetFloatEnv(...) #1

declare dso_local i64 @isatty(i32) #1

declare dso_local i32 @strcmp(i8*, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
